add search endpoint
